[backend] Change external reference resolution for OpenCTI integration